@@ -6,7 +6,7 @@ module Sequel
       Errors = Model::Errors
     end
     module ClassMethods
-      {:import=>:multi_insert, :size=>:count, :uniq=>:distinct}.each do |o, n|
+      {:size=>:count, :uniq=>:distinct}.each do |o, n|
         class_eval "def #{o}(*args, &block); Deprecation.deprecate('Sequel::Model.#{o}', 'Use Sequel::Model.dataset.#{n}'); dataset.#{n}(*args, &block); end"
       end
   
